# grapl

./: build_test.sh  dobi.yaml  docker-compose.yml
docker/: Dockerfile.js-base  Dockerfile.python-base  Dockerfile.rust-base
docs/analyzers/: deploying.md
docs/setup/: aws.md
src/js/engagement_view/: .dockerignore.swp  build.sh  lens.js  package.json
src/js/engagement_view/componentMap/: components.txt
src/js/engagement_view/public/: index.html
src/js/engagement_view/src/: Login.tsx
src/js/graphql_endpoint/: Dockerfile  package-lock.json  package.json  server.js
src/js/graphql_endpoint/modules/: dgraph_client.js  errors.js  jwt.js  schema.js  var_allocator.js
src/js/grapl-cdk/: Dockerfile  README.md  cdk.json  deploy_all.sh  destroy_all.sh  index.ts  package.json
src/js/grapl-cdk/edge_ux/: asset-manifest.json  index.html  precache-manifest.671f335c9598f21afed13ca0452243e5.js  service-worker.js
src/python/: analyzer_executor.Dockerfile  engagement-creator.Dockerfile  grapl-tests-common.Dockerfile
src/python/grapl_analyzerlib/: Dockerfile
src/rust/derive-dynamic-node/: Cargo.toml
src/rust/graph-descriptions/: Cargo.toml
src/rust/graph-descriptions/proto/: graph_description.proto
src/rust/graph-descriptions/src/: asset.rs  dynamic_node.rs  file.rs  graph.rs  ip_address.rs  ip_connection.rs  ip_port.rs  lib.rs  network_connection.rs  node.rs  process.rs  process_inbound_connection.rs  process_outbound_connection.rs  unit.rs
src/rust/node-identifier/: Cargo.toml
test/cypress/integration/: open_engagement_notebook_spec.js  upload_plugins.js
(+77 files in other folders)
